public/stylesheets/tools.css
.breadcrumbs{
    padding-left: 5vw;
    padding-bottom: 0.7%;
    padding-top: 0.2vh;
    background-image: linear-gradient(#99C0CC 0px, #BBD2DB 100%);

}

.breadcrumbs a{
    color: white;
}

h1 {
    font-weight: 100;
    font-size: 31px;
    /* align-content: center; */
    text-transform: uppercase;

}
h2{
    font-size: 1em;
    color: white;
    font-weight: 100;
}
body{
	    font-family: 'Open Sans', sans-serif;
        background-color: rgba(238,238,238,0.32); /*rgba(238,238,238,32);*/
        background-image: none;
        padding-top: 0px;
       overflow-x: hidden;

}
#main-container{
    background-color: white;
}

.navbar-fixed-top{
    position: relative;
    margin-bottom: auto;
}
.tooltitle h2{
	color: black;
}
.container-fluid{
    padding-right: 0px;
    padding-left: 0px;
}
.container{
    padding-left: 5%;
    padding-right: 5%;
    padding-top: 0.3%;

}
.res_description p{
        font-family: 'Open Sans', sans-serif;
        font-size: 1.2em;
        color: #000000;
        font-weight: 100;
}
.res_description{
      background: #F5F5F5;
      padding-top: 1%;
      padding-bottom: 1%;
  }

#detail{
    /* Rectangle 2: */
background: rgba(238,238,238,0.32);
padding-bottom: 6%;
}
/*.deets{
    display: inline-block;
}*/


@media(min-width: 1200px){
.deet-heading{
    display: inline-block;
    padding-left: 12%;
    padding-right: 12%;
    padding-bottom: 2%;
}
.rect1{
     width: 32%;
    height: 0.4%;
    background: #979797;
    border: 1px solid #979797;
    margin-top: 2%;
    display: inline-block;
    visibility: visible;
}
}

@media(min-width: 1440px){
.deet-heading{
    display: inline-block;
    padding-left: 12%;
    padding-right: 12%;
    padding-bottom: 2%;
}
.rect1{
    width: 29%;
    height: 0.4%;
    background: #979797;
    border: 1px solid #979797;
    margin-top: 2%;
    display: inline-block;
    visibility: visible;
}
}

@media(min-width: 2260px){
.deet-heading{
    display: inline-block;
    padding-left: 12%;
    padding-right: 12%;
    padding-bottom: 2%;
}
.rect1{
     width: 28%;
    height: 0.4%;
    background: #979797;
    border: 1px solid #979797;
    margin-top: 2%;
    display: inline-block;
    visibility: visible;
}
}


.rect1{
    visibility: none;
}

#deets-body{
    background: white;
}

h3{
    font-size: 18px;
    padding-left: 1%;
    font-weight: 600;
}
ul{
    list-style: none;
}
.col-md-6 ,.col-lg-6{
    padding-left: 6%;
    padding-right: 6%
}
.taggytags{
    display: inline-block;
}
.tagholder{
background: #5A7B85;
border-radius: 10px;
color: white;
padding-top: 2px;
padding-bottom: 2px;
padding-right: 15px;
padding-left: 15px;
/*width: 115%;*/
    display: inline-block;
    margin-right: 6px;

}

#creds-body{
    background: white;
}
#credit{
    /* Rectangle 2: */
background: rgba(238,238,238,0.32);
padding-bottom: 6%;
}

.cost-stuff{
    /* Rectangle 3: */
background: #5A7B85;
    /*border-radius: 10px;*/
    color: white;
    padding-top: 2px;
    padding-bottom: 2px;
    padding-right: 20px;
    padding-left: 20px;
    /* width: 115%; */
    display: block;
    float: right;
    margin-right: 6px;
    font-weight: 100;
}

#hpdeet,#sourcedeet{

    overflow-wrap: break-word;
    word-break: break-word;
    word-wrap: break-word;
}
#license{
    background: #FFE2C6;
    color: black;
}
/*
font-family: OpenSans;
font-size: 14px;
color: #FFFFFF;
line-height: 19px;*/

